# erqos-test

./: .gitignore  CLAUDE.md  README.md  RO-Skid-Control-Specification.docx  pixi.toml
firmware/: firmware.ino
firmware/src/: eqsp32_io.cpp  eqsp32_io.h  eqsp32_port.h  io_interface.h  rgb_indicator.cpp  rgb_indicator.h  ro_controller.cpp  ro_controller.h  ro_types.h  sensors.cpp  sensors.h
scripts/: _env.sh  boards.sh  build.sh  clean.sh  monitor.sh  setup.sh  test.sh  upload.sh
tests/: CMakeLists.txt  sketch.h  sketch_tu.cpp  test_behaviors.cpp  test_controller_unit.cpp  test_rgb.cpp  test_scenarios.cpp  test_sensors.cpp
tests/fakes/: Arduino.h  EQSP32.h  fakes.cpp
tests/support/: fake_eqsp32.h  fake_io.h  harness.h  plant_model.cpp  plant_model.h
